config-root/namespaces/jx-staging/spring-boot-test/spring-boot-test-spring-boot-test-deploy.yaml
# Source: spring-boot-test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-test-spring-boot-test
  labels:
    draft: draft-app
    chart: "spring-boot-test-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: spring-boot-test-spring-boot-test
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: spring-boot-test-spring-boot-test
    spec:
      containers:
        - name: spring-boot-test
          image: "10.110.91.24/bwoodhouse322/spring-boot-test:1.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "knative-docker-user-pass"
