config-root/namespaces/jx-staging/spring-boot-test/spring-boot-test-svc.yaml
# Source: spring-boot-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-test
  labels:
    chart: "spring-boot-test-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-boot-test-spring-boot-test
