config-root/namespaces/jx-staging/spring-boot-test/spring-boot-test-ingress.yaml
# Source: spring-boot-test/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: spring-boot-test
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: spring-boot-test
              servicePort: 80
      host: spring-boot-test-jx-staging.192.168.64.4.nip.io
